REGRESSION (r260360): Ionic modal dialog doesn't animate correctly when dragged and released https://bugs.webkit.org/show_bug.cgi?id=216308 <rdar://problem/68567444>

Reviewed by Simon Fraser.

Source/WebCore:

We fixed seeking for animations with a reversed playback rate in r261637, the fix for bug 204717,
but only looked at the animation's playback rate. However, an animation can also play in reverse
using the "direction" property of the timing object passed to updateTiming(), so we should also
check that it's playing forwards in order to be seeked.

Test: webanimations/accelerated-animation-easing-and-direction-update.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::animationCanBeAccelerated const):

LayoutTests:

Add a new test that updates the "easing" and "direction" timing properties of a playing animation
and checks that it matches the display of another animation with similar timing properties from
the start.

* platform/win/TestExpectations:
* webanimations/accelerated-animation-easing-and-direction-update-expected.html: Added.
* webanimations/accelerated-animation-easing-and-direction-update.html: Added.


Canonical link: https://commits.webkit.org/229194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266834 268f45cc-cd09-0410-ab3c-d52691b4dbfc